--- a/mod2-solution/index.html
+++ b/mod2-solution/index.html
@@ -1,11 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Module 2 Solution</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<h1>Our Menu</h1>
 
+		<div class="col-lg-3 col-md-2">
+			<div id="first" class="title">Chicken</div>
+			<div class="text">
+				<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras at ipsum at metus hendrerit pretium. Donec faucibus, leo eu ultricies mollis, risus metus ultricies nulla, vitae vehicula neque nibh in ipsum. Nam lectus tellus, cursus quis vulputate nec, eleifend quis mi. Integer eu feugiat ante, sed blandit ex. Praesent id.</p>
+			</div>
+		</div>
+
+		<div class="col-lg-3 col-md-2">
+			<div id="second" class="title">Beef</div>
+
+			<div class="text">
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras at ipsum at metus hendrerit pretium. Donec faucibus, leo eu ultricies mollis, risus metus ultricies nulla, vitae vehicula neque nibh in ipsum. Nam lectus tellus, cursus quis vulputate nec, eleifend quis mi. Integer eu feugiat ante, sed blandit ex. Praesent id.</p>
+			</div>
+		</div>
+
+		<div class="col-lg-3 col-md-1">
+			<div id="third" class="title">Sushi </div>
+			
+			<div class="text">
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras at ipsum at metus hendrerit pretium. Donec faucibus, leo eu ultricies mollis, risus metus ultricies nulla, vitae vehicula neque nibh in ipsum. Nam lectus tellus, cursus quis vulputate nec, eleifend quis mi. Integer eu feugiat ante, sed blandit ex. Praesent id.</p>
+			</div>
+
+		</div>
+		
 </body>
 </html>
